--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
                 <artifactId>mybatis-generator-core</artifactId>
                 <version>1.3.5</version>
             </dependency>
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-core</artifactId>
+                <version>5.2.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
