netty module change

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -41,7 +41,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
         <dependency>
             <artifactId>common</artifactId>
             <groupId>com.huangsuip</groupId>
