--- a/config/src/main/resources/config/bootstrap.yml
+++ b/config/src/main/resources/config/bootstrap.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: Sword-Config
@@ -20,3 +21,5 @@ eureka:
 logging:
   level:
     root: info
+server:
+  port: 8099
