--- a/register/pom.xml
+++ b/register/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>framework</artifactId>
             <groupId>com.huangsuip</groupId>
         </dependency>
