--- a/config/src/main/resources/config/bootstrap.yml
+++ b/config/src/main/resources/config/bootstrap.yml
@@ -1,14 +1,18 @@
 
 spring:
+  profiles:
+    active: native
   application:
     name: Sword-Config
   cloud:
     config:
       server:
-        git:
-          uri: https://github.com/HungSuip/sword.git
-          force-pull: true
-          searchPaths: config/profile
+        native:  # 使用本地要加 --spring.profiles.active=native
+          search-locations: "classpath:/config/,classpath:/profile/"
+#        git:
+#          uri: https://github.com/HungSuip/sword
+#          force-pull: true
+#          searchPaths: config/profile
 #          username: hsp001
 #          password: yitian12546
 #          skip-ssl-validation: true
