--- a/config/src/main/resources/profile/Sword-Register-port1.yaml
+++ b/config/src/main/resources/profile/Sword-Register-port1.yaml
@@ -9,7 +9,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      #defaultZone: http://localhost:8762/eureka/,http://localhost:8763/eureka/
+      defaultZone: http://localhost:8762/eureka/,http://localhost:8763/eureka/
     register-with-eureka: false
     fetch-registry: false
   instance:
